rename .tex after sorting again

--- a/stats.tex
+++ b/stats.tex
@@ -27,7 +27,7 @@
 		ylabel={Informationsgewinn/Bit},
 		xlabel={MN},
 		]
-		\input{statsMN.tex.sort}
+		\input{statsMN.tex}
 		\addplot[ending] coordinates {(10,0) (10,25)};
 	\end{axis}
 \end{tikzpicture}
@@ -37,7 +37,7 @@
 		ylabel={Informationsgewinn/Bit},
 		xlabel={MB},
 		]
-		\input{statsMB.tex.sort}
+		\input{statsMB.tex}
 		\addplot[ending] coordinates {(10,0) (10,4)};
 	\end{axis}
 \end{tikzpicture}
@@ -49,7 +49,7 @@
 		xlabel={MB/MN},
 		width=15cm,
 		]
-		\input{statsInfo.tex.sort}
+		\input{statsInfo.tex}
 		\addplot[ending] coordinates {(20,0) (20,27)};
 		\addplot[ending] coordinates {(0,3.3219280948874) (25,3.3219280948874)};
 	\end{axis}
