--- a/stats.tex
+++ b/stats.tex
@@ -9,14 +9,16 @@
 		grid style={gray!30},
 		axis lines = middle,
 		axis line style={->},
-		% transpose legend=true,
-		legend columns=-1,
+		transpose legend=true,
+		legend columns=2,
 		legend style={
 			at={(0.5,-0.1)},anchor=north,
 			/tikz/every even column/.append style={column sep=0.5cm}
 		},
 		mark size=1pt,
 		line width=0.2pt,
+		width=15cm,
+		height=20cm,
 	},
 	ending/.style={orange,thick},
 }
@@ -30,9 +32,10 @@
 		xlabel={MN},
 		]
 		\input{statsMN.tex}
-		\addplot[ending] coordinates {(10,0) (10,10)};
+		\addplot[ending] coordinates {(10,0) (10,7)};
 	\end{axis}
 \end{tikzpicture}
+%
 \begin{tikzpicture}
 	\begin{axis}[
 		def_axis,
@@ -40,7 +43,7 @@
 		xlabel={MB},
 		]
 		\input{statsMB.tex}
-		\addplot[ending] coordinates {(10,0) (10,4)};
+		\addplot[ending] coordinates {(10,0) (10,8)};
 	\end{axis}
 \end{tikzpicture}
 \\
@@ -49,10 +52,10 @@
 		def_axis,
 		ylabel={fehlende Information/Bit},
 		xlabel={MB/MN},
-		width=15cm,
+		width=20cm,
 		]
 		\input{statsInfo.tex}
-		\addplot[ending] coordinates {(20,0) (20,27)};
+		\addplot[ending] coordinates {(20,0) (20,29)};
 		\addplot[ending] coordinates {(1,3.3219280948874) (25,3.3219280948874)};
 	\end{axis}
 \end{tikzpicture}
