localization for menu as well

--- a/gh-pages/i18n/de.yaml
+++ b/gh-pages/i18n/de.yaml
@@ -4,3 +4,28 @@ tab-individual: Einzelne Tabellen
 tab-everything: Alle zusammen
 tree-current: Aktuellster Baum
 tab-start: Anfangsverteilung
+
+
+de-season1: "DE Staffel 1"
+de-season2: "DE Staffel 2"
+de-season3: "DE Staffel 3"
+de-season4: "DE Staffel 4"
+de-season5: "DE Staffel 5"
+de-season6: "DE Staffel 6"
+
+deR-season1: "DE RSIL Staffel 1"
+deR-season2: "DE RSIL Staffel 2"
+deR-season3: "DE RSIL Staffel 3"
+deR-season4: "DE RSIL Staffel 4"
+
+uk-seson1: "UK Staffel 1"
+
+us-seson1: "US Staffel 1"
+us-seson2: "US Staffel 2"
+us-seson3: "US Staffel 3"
+us-seson4: "US Staffel 4"
+us-seson5: "US Staffel 5"
+us-seson6: "US Staffel 6"
+us-seson7: "US Staffel 7"
+us-seson8: "US Staffel 8"
+us-seson9: "US Staffel 9"
