--- a/gh-pages/i18n/en.yaml
+++ b/gh-pages/i18n/en.yaml
@@ -4,3 +4,28 @@ tab-individual: Single Tables
 tab-everything: All toegther
 tree-current: Current Tree
 tab-start: Start Distribution
+
+
+de-season1: "DE Season 1"
+de-season2: "DE Season 2"
+de-season3: "DE Season 3"
+de-season4: "DE Season 4"
+de-season5: "DE Season 5"
+de-season6: "DE Season 6"
+
+deR-season1: "DE RSIL Season 1"
+deR-season2: "DE RSIL Season 2"
+deR-season3: "DE RSIL Season 3"
+deR-season4: "DE RSIL Season 4"
+
+uk-seson1: "UK Season 1"
+
+us-seson1: "US Season 1"
+us-seson2: "US Season 2"
+us-seson3: "US Season 3"
+us-seson4: "US Season 4"
+us-seson5: "US Season 5"
+us-seson6: "US Season 6"
+us-seson7: "US Season 7"
+us-seson8: "US Season 8"
+us-seson9: "US Season 9"
