add information to comparison

--- a/gh-pages/i18n/de.yaml
+++ b/gh-pages/i18n/de.yaml
@@ -29,3 +29,15 @@ us-seson6: "US Staffel 6"
 us-seson7: "US Staffel 7"
 us-seson8: "US Staffel 8"
 us-seson9: "US Staffel 9"
+
+season: "Staffel"
+rulesetShort: "R"
+rulesetDesc: "Spielmodus / Regeln"
+players: "Spieler"
+
+rs-SomeoneIsDup: "Doppelmatch unbekannt"
+rs-SomeoneIsTrip: "Tripplematch unbekannt"
+rs-NToN: "Jeder mit Jedem"
+rs-FixedDup: "eine Person des Doppelmatches bekannt"
+rs-FixedTrip: "eine Person des Tripplematches bekannt"
+rs-Eq: "normal gamemode"
