--- a/gh-pages/i18n/en.yaml
+++ b/gh-pages/i18n/en.yaml
@@ -29,3 +29,15 @@ us-seson6: "US Season 6"
 us-seson7: "US Season 7"
 us-seson8: "US Season 8"
 us-seson9: "US Season 9"
+
+season: "Season"
+rulesetShort: "RS"
+rulesetDesc: "Ruleset"
+players: "Players"
+
+rs-SomeoneIsDup: "doublematch unknown"
+rs-SomeoneIsTrip: "tripplematch unknown"
+rs-NToN: "Everyone with Everyone"
+rs-FixedDup: "one person of the doublematch is known"
+rs-FixedTrip: "one person of the tripplematch is known"
+rs-Eq: "normal gamemode"
