--- a/gh-pages/i18n/de.yaml
+++ b/gh-pages/i18n/de.yaml
@@ -35,9 +35,14 @@ rulesetShort: "R"
 rulesetDesc: "Spielmodus / Regeln"
 players: "Spieler"
 
-rs-SomeoneIsDup: "Doppelmatch unbekannt"
+# rs-XTimesDup-fixed-someone: ""
+rs-XTimesDup-0-1: "1 Doppelmatch unbekannt"
+rs-XTimesDup-0-2: "2 Doppelmatches unbekannt"
+rs-XTimesDup-1-0: "1 Doppelmatch, eine Person ist bekannt"
+rs-XTimesDup-1-1: "2 Doppelmatch, einmal ist eine Person bekannt"
+rs-XTimesDup-2-0: "2 Doppelmatches, je eine Person ist bekannt"
+
 rs-SomeoneIsTrip: "Tripplematch unbekannt"
 rs-NToN: "Jeder mit Jedem"
-rs-FixedDup: "eine Person des Doppelmatches bekannt"
 rs-FixedTrip: "eine Person des Tripplematches bekannt"
 rs-Eq: "normal gamemode"
