--- a/gh-pages/i18n/en.yaml
+++ b/gh-pages/i18n/en.yaml
@@ -35,9 +35,14 @@ rulesetShort: "RS"
 rulesetDesc: "Ruleset"
 players: "Players"
 
-rs-SomeoneIsDup: "doublematch unknown"
+# rs-XTimesDup-fixed-someone: ""
+rs-XTimesDup-0-1: "1 doublematch unknown"
+rs-XTimesDup-0-2: "2 doublematches unknown"
+rs-XTimesDup-1-0: "1 doublematch, one person is known"
+rs-XTimesDup-1-1: "2 doublematches, of one match, one person is known"
+rs-XTimesDup-2-0: "2 doublematches, one person each is known"
+
 rs-SomeoneIsTrip: "tripplematch unknown"
 rs-NToN: "Everyone with Everyone"
-rs-FixedDup: "one person of the doublematch is known"
 rs-FixedTrip: "one person of the tripplematch is known"
 rs-Eq: "normal gamemode"
