add missing translation keys

--- a/gh-pages/i18n/de.yaml
+++ b/gh-pages/i18n/de.yaml
@@ -9,6 +9,7 @@ blackouts: "Blackouts"
 sold: "Verkauft"
 soldButGood: "PMs verkauft"
 matchesFound: "PMs in MB"
+total: "Total"
 
 de-season1: "DE Staffel 1"
 de-season2: "DE Staffel 2"
