--- a/gh-pages/i18n/en.yaml
+++ b/gh-pages/i18n/en.yaml
@@ -9,6 +9,7 @@ blackouts: "Blackouts"
 sold: "Sold"
 soldButGood: "PC sold"
 matchesFound: "PC in TB found"
+total: "Total"
 
 de-season1: "DE Season 1"
 de-season2: "DE Season 2"
