add missing translation

--- a/gh-pages/i18n/de.yaml
+++ b/gh-pages/i18n/de.yaml
@@ -10,6 +10,7 @@ sold: "Verkauft"
 soldButGood: "PMs verkauft"
 matchesFound: "PMs in MB"
 total: "Total"
+won: "Gewonnen?"
 
 de-season1: "DE Staffel 1"
 de-season2: "DE Staffel 2"
