--- a/gh-pages/i18n/en.yaml
+++ b/gh-pages/i18n/en.yaml
@@ -10,6 +10,7 @@ sold: "Sold"
 soldButGood: "PC sold"
 matchesFound: "PC in TB found"
 total: "Total"
+won: "Won?"
 
 de-season1: "DE Season 1"
 de-season2: "DE Season 2"
