add stats whether the riddle was solvable prior to the 10th matching night (or one had to guess)

--- a/gh-pages/i18n/de.yaml
+++ b/gh-pages/i18n/de.yaml
@@ -11,7 +11,7 @@ soldButGood: "PMs verkauft"
 matchesFound: "PMs in MB"
 total: "Total"
 won: "Gewonnen?"
-
+solvable: "Lösbar?"
 offers: "Angebote"
 offerAndMatch: "Angebote für PMs"
 offeredMoney: "Σ Angebotenes Geld"
