--- a/gh-pages/i18n/en.yaml
+++ b/gh-pages/i18n/en.yaml
@@ -11,7 +11,7 @@ soldButGood: "PC sold"
 matchesFound: "PC in TB found"
 total: "Total"
 won: "Won?"
-solvable: "Solvable?"
+solvable: "Solvable in"
 offers: "Offers"
 offerAndMatch: "Offered PCs"
 offeredMoney: "Σ Offered Money (TB/MC)"
